legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__multicolumns_layout_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



첫페이지 첫 문단: 1단

2단 2단 2단 2단 2단 2단 2단 2단 2단

2단 2단 2단

3단 3단 3단 3단  3단  3단  3단 3단 3단 3단 3단

3단 3단

3단 3단 3단

---


두 번 째 페이지: 새 쪽으로 2 단

다단다단다단다단다단다단다단

글 상자 안의 다단  
글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자  

| 표 셀 안의 다단<br> 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀<br> |
|---|
