legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__multicolumns_widths_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">1</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">2</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">3</span></p>
</div>
