legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__page_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">페이지1</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">페이지2</span></p>
<hr class="hwp-page-break">
</div>
